[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zynkode-cluster"
version = "0.1.0"
description = "Multi-node GPU cluster management and job scheduling"
requires-python = ">=3.10"
authors = [{name = "Zara Quinn", email = "zara.quinn@zynkode.dev"}]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
